Don't use absolute position on the timestamp to avoid text wrapping issues

--- a/public/themes/style.css
+++ b/public/themes/style.css
@@ -46,8 +46,6 @@ body
 .timestamp
 {
   color: gray;
-  position: absolute;
-  right: 0;
 }
 
 .c0 { color: white; }
